--- a/install
+++ b/install
@@ -4,7 +4,7 @@ r="\033[1;31m"
 b="\033[1;34m"
 w="\033[0m"
 echo ""
-echo -e $b"➤ "$w"Axis For Termux"
+echo -e $b"➤ "$w"Axis For Termux v2.0"
 echo ""
 echo -e $b"➤ "$w"prepare for installing dependencies ..."
 echo ""
